2005-02-21  Murray Cumming  <murrayc@murrayc.com>

	*  press_release/gnome210_press_release.sxw: Changes based on 
	comments from Glynn Foster: Mention stability, regular releases, and 
	the LiveCD..

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* press_release/gnome210_press_release.sxw: First version finished.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Added a continue-to link so people do not think 
	that is all there is.
	* rnapplications.xml: Added epiphany and skeleton for evolution.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Changed my mind about putting desktop after 
	applications, because there are so many applications changes.
	* rnutilities: Added floppy formatter.
	* rnsysadmin: Added g-s-t, and log-viewer.

2005-02-20  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Did nautilus and gnome-backgrounds bits.

2005-02-19  Murray Cumming  <murrayc@murrayc.com>

	* rnutilities.xml: Mentioned changes in search, archive manager, and 
	dictionary.
	* rncontrolcenter.xml: Mentioned better Keyboard Layout UI.

2005-02-19  Murray Cumming  <murrayc@murrayc.com>

	* rnreleasenotes.xml: Move applications above desktop, because we have 
	2 new apps and not much to say about nautilus. Readded control center, 
	so we can mention the keyboard layout preferences improvements.
	* rnapplications.xml: Mention the new applications. Still need to do
	the changes to the others.
	* rnutilities. Mentioned gedit changes. Still need to do the others.
	* I moved some stuff on live.gnome.org/ReleaseNotes to a Done section.
	* press_release/gnome210_press_release.sxw: Done apart from the 2nd 
	quote and some more bullet points.

2005-02-17  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml, rnapplets.xml: Tidied up the new text, to make it 
	shorter, and to remove obscure techy stuff.

2005-02-15  Davyd Madeley  <davyd@madeley.id.au>

	* release-notes.xml:
	* rndesktop.xml: