@@ -8,239 +8,10 @@
   <sect1 id="rninstallation">
     <title>Installation of GNOME &version;</title>
 
-   <para>We recommend that you use official installation packages, such as those for your linux distribution. Vendors are likely to package GNOME &version; relatively quickly, and to release new versions soon that include GNOME &version;. However, many people don't want to wait, and will want to build GNOME from source code, even though that is more difficult.</para>
+   <para>For GNOME &version; we have a LiveCD, available from www.gnome.org. The LiveCD allows you to try a full GNOME desktop on Linux without installing anything on your hard drive. This is the best way to see for yourself what's new.</para>
+  
+   <para>For actual use, we recommend that you install official packages, such as those for your Linux distribution. Vendors are likely to package GNOME &version; relatively quickly, and to release new versions soon that include GNOME &version;.</para>
 
-   <para>Building from source is even more difficult than normal this time, because GNOME 2.10 requires your existing applications to register themselves in the new cross-desktop MIME-type system.</para>
-   <para>As with GNOME 2.8, you must define the XDG_DATA_DIRS environment variable to the path at which your MIME database is installed, for instance <literal>&lt;prefix&gt;/share</literal>.</para>
+   <para>However, many advanced users would like to build GNOME from source code, to test the very latest versions, to provide feedback and improvements. To help with this, we recommend the <ulink url="http://cipherfunk.org/garnome/">GARNOME</ulink> utility, for building from released tarballs, and <ulink url="http://www.freedesktop.org/Software/jhbuild">jhbuild</ulink>, for building from CVS.</para>
 
-    <sect2 id="rndeps">
-      <title>External Dependencies</title>
-        <para>
-	<itemizedlist>
-	  <listitem>
-	    <para>pkg-config, available at <ulink
-		url="http://www.freedesktop.org/software/pkgconfig/releases/pkgconfig-0.15.0.tar.gz">http://www.freedesktop.org/software/pkgconfig/releases/pkgconfig-0.15.0.tar.gz</ulink></para>
-	  </listitem>
-	  <listitem>
-		<para>The Xft2 and fontconfig family of libraries, available at <ulink
-	    url="http://fontconfig.org/">http://fontconfig.org/</ulink></para>
-		<para>Note that while these libraries are available as part of XFree86
-		4.3, the newer versions from fontconfig.org are highly
-		recommended.</para>
-	  </listitem>
-	  <listitem>
-	    <para>FreeType 2.0.9 or greater, available at <ulink url="http://www.freetype.org/">http://www.freetype.org/</ulink></para>
-	  </listitem>
-	  <listitem>
-	    <para>docbook-xml [docbook dtd 4.1.2]</para>
-	  </listitem>
-	  <listitem>
-	    <para>docbook-xsl [docbook xsl stylesheets]</para>
-	  </listitem>
-          <listitem>
-	  <para>
-	    shared-mime-info
-	  </para>
-	</listitem>
-        <listitem>
-	  <para>
-	    hicolor-icon-theme
-	  </para>
-	</listitem>
-	</itemizedlist>
-	
-      </para>
-    </sect2>
-    <sect2 id="rndevlibdeps">
-      <title>Development Library dependencies</title>
-      <itemizedlist>
-	<listitem>
-	 <para>
-	    libpng
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    libjpeg
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    libtiff
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    XFree86
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    libpopt
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    libbbz2
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    zlib
-	  </para>
-	</listitem>
-	<listitem>
-	  <para>
-	    libfam
-	  </para>
-	</listitem>
-        <listitem><para>libgpg-error</para></listitem>
-        <listitem><para>libgcrypt</para></listitem>
-        <listitem><para>libtasn1</para></listitem>
-        <listitem><para>opencdk</para></listitem>
-        <listitem><para>gnutls</para></listitem>
-        <listitem><para>libgsf</para></listitem>
-        <listitem><para>libcroco</para></listitem>
-        <listitem>
-	  <para>
-	    mozilla
-	  </para>
-	</listitem>
-      </itemizedlist>
-
-    </sect2>
-
-    <sect2 id="rninstallationorder">
-      <title>GNOME &version; Installation Order</title>
-      <para>
-	<itemizedlist>
-          <listitem><para>libxml2</para></listitem>
-          <listitem><para>libxslt</para></listitem>
-          <listitem><para>gtk-doc</para></listitem>
-          <listitem><para>glib</para></listitem>
-          <listitem><para>libIDL</para></listitem>
-          <listitem><para>ORBit2</para></listitem>
-          <listitem><para>intltool</para></listitem>
-          <listitem><para>libbonobo</para></listitem>
-          <listitem><para>pango</para></listitem>
-          <listitem><para>atk</para></listitem>
-          <listitem><para>gtk+</para></listitem>
-          <listitem><para>gconf</para></listitem>
-          <listitem><para>desktop-file-utils</para></listitem>
-          <listitem><para>gnome-mime-data</para></listitem>
-          <listitem><para>gnome-vfs</para></listitem>
-          <listitem><para>audiofile</para></listitem>
-          <listitem><para>esound</para></listitem>
-          <listitem><para>libgnome</para></listitem>
-          <listitem><para>libart_lgpl</para></listitem>
-          <listitem><para>libglade</para></listitem>
-          <listitem><para>libgnomecanvas</para></listitem>
-          <listitem><para>libbonoboui</para></listitem>
-          <listitem><para>gnome-icon-theme</para></listitem>
-          <listitem><para>gnome-keyring</para></listitem>
-          <listitem><para>libgnomeui</para></listitem>
-          <listitem><para>startup-notification</para></listitem>
-          <listitem><para>gtk-engines</para></listitem>
-          <listitem><para>gnome-themes</para></listitem>
-          <listitem><para>scrollkeeper</para></listitem>
-          <listitem><para>gnome-desktop</para></listitem>
-          <listitem><para>libwnck</para></listitem>
-          <listitem><para>libsoup</para></listitem>
-          <listitem><para>evolution-data-server</para></listitem>
-          <listitem><para>gnome-panel</para></listitem>
-          <listitem><para>gnome-session</para></listitem>
-          <listitem><para>vte</para></listitem>
-          <listitem><para>gnome-terminal</para></listitem>
-          <listitem><para>libgtop</para></listitem>
-          <listitem><para>gail</para></listitem>
-          <listitem><para>libxklavier</para></listitem>
-          <listitem><para>gnome-applets</para></listitem>
-          <listitem><para>metacity</para></listitem>
-          <listitem><para>librsvg</para></listitem>
-          <listitem><para>eel</para></listitem>
-          <listitem><para>nautilus</para></listitem>
-          <listitem><para>gnome-control-center</para></listitem>
-          <listitem><para>gtkhtml2</para></listitem>
-          <listitem><para>gnome-doc-utils</para></listitem>
-          <listitem><para>yelp</para></listitem>
-          <listitem><para>bug-buddy</para></listitem>
-          <listitem><para>libgnomecups</para></listitem>
-          <listitem><para>libgnomeprint</para></listitem>
-          <listitem><para>libgnomeprintui</para></listitem>
-          <listitem><para>gtksourceview</para></listitem>
-          <listitem><para>gedit</para></listitem>
-          <listitem><para>eog</para></listitem>
-          <listitem><para>ggv</para></listitem>
-          <listitem><para>gconf-editor</para></listitem>
-          <listitem><para>gnome-utils</para></listitem>
-          <listitem><para>procman</para></listitem>
-          <listitem><para>gstreamer</para></listitem>
-          <listitem><para>gst-plugins</para></listitem>
-          <listitem><para>gnome-media</para></listitem>
-          <listitem><para>nautilus-media</para></listitem>
-          <listitem><para>gnome-netstatus</para></listitem>
-          <listitem><para>gcalctool</para></listitem>
-          <listitem><para>gpdf</para></listitem>
-          <listitem><para>gucharmap</para></listitem>
-          <listitem><para>nautilus-cd-burner</para></listitem>
-          <listitem><para>zenity</para></listitem>
-          <listitem><para>at-spi</para></listitem>
-          <listitem><para>libgail-gnome</para></listitem>
-          <listitem><para>gnome-speech</para></listitem>
-          <listitem><para>gnome-mag</para></listitem>
-          <listitem><para>gnopernicus</para></listitem>
-          <listitem><para>gok</para></listitem>
-          <listitem><para>epiphany</para></listitem>
-          <listitem><para>gnome-games</para></listitem>
-          <listitem><para>gnome-user-docs</para></listitem>
-          <listitem><para>file-roller</para></listitem>
-          <listitem><para>gnome-system-tools</para></listitem>
-          <listitem><para>gnome-nettool</para></listitem>
-          <listitem><para>vino</para></listitem>
-          <listitem><para>dbus</para></listitem>
-          <listitem><para>hal</para></listitem>
-          <listitem><para>gnome-volume-manager</para></listitem>
-          <listitem><para>gal</para></listitem>
-          <listitem><para>gtkhtml</para></listitem>
-          <listitem><para>evolution</para></listitem>
-          <listitem><para>evolution-webcal</para></listitem>
-          <listitem><para>gnomemeeting</para></listitem>
-
-          <listitem><para>libsigc++</para></listitem>
-          <listitem><para>glibmm</para></listitem>
-          <listitem><para>gtkmm</para></listitem>
-          <listitem><para>libgnomemm</para></listitem>
-          <listitem><para>libgnomecanvasmm</para></listitem>
-          <listitem><para>libglademm</para></listitem>
-          <listitem><para>libgnomeuimm</para></listitem>
-          <listitem><para>gnome-vfsmm</para></listitem>
-
-          <listitem><para>libgtk-java</para></listitem>
-          <listitem><para>libgconf-java</para></listitem>
-          <listitem><para>libglade-java</para></listitem>
-          <listitem><para>libgnome-java</para></listitem>
- 
-          <listitem><para>Glib (perl)</para></listitem>
-          <listitem><para>Gtk2 (perl)</para></listitem>      
-          <listitem><para>Gnome2 (perl)</para></listitem> 
-          <listitem><para>Gnome2-Canvas (perl)</para></listitem>
-          <listitem><para>Gtk2-GladeXML (perl)</para></listitem>  
-          <listitem><para>Gnome2-VFS (perl)</para></listitem> 
-          <listitem><para>Gnome2-GConf (perl)</para></listitem>
-
-          <listitem><para>pygtk</para></listitem> 
- 
-	</itemizedlist>
-      </para>
-    </sect2>
-
-    <sect2 id="rngarnome">
-      <title>GARNOME</title>
-      <para>If you do not wish to manually build
-      each module yourself, then you might consider using GARNOME, a GNOME
-      source code distribution based on the GAR ports system. GARNOME automatically
-      downloads the tarballs and builds them for
-      you. However, GARNOME is ususally used only for testing of unstable development versions of GNOME.</para>
-      <para>To find out more information visit the <ulink url="http://cipherfunk.org/garnome/">GARNOME web page</ulink>.</para>
-    </sect2>
   </sect1>
